Fix horizontal scroll 2

--- a/styles/global.css
+++ b/styles/global.css
@@ -20,12 +20,18 @@ canvas {
   position: absolute;
   top: 0;
   z-index: -1;
+  width: 100%;
+  height: 100%;
+}
+
+html,
+body {
+  max-width: 100vw;
+  overflow-x: hidden;
 }
 
 body {
   background-color: black;
-  overflow-x: hidden;
-  width: 100vw;
 }
 
 header {
